[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluelinky"
version = "0.0.1"
description = "Unofficial Hyundai Bluelink client written in Python"
authors = [{name = "Hacksore"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/Hacksore/bluelinky"

[tool.setuptools]
packages = ["bluelinky", "bluelinky.controllers", "bluelinky.vehicles"]
